{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 24,
  "lineage": "0d315f16-da6c-4eb7-36c2-639cad5f6e9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:internet-gateway/igw-05ab5056adbf3d834",
            "id": "igw-05ab5056adbf3d834",
            "owner_id": "730335550097",
            "tags": {
              "Name": "EksVPC-igw"
            },
            "tags_all": {
              "Name": "EksVPC-igw"
            },
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "dependencies": [
            "aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:route-table/rtb-035e54cc18a3ccc47",
            "id": "rtb-035e54cc18a3ccc47",
            "owner_id": "730335550097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a59bf56e542ebff8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EksVPC-private-rt"
            },
            "tags_all": {
              "Name": "EksVPC-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.EksVPC",
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:route-table/rtb-0d8bc834c541ccd8f",
            "id": "rtb-0d8bc834c541ccd8f",
            "owner_id": "730335550097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ab5056adbf3d834",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EksVPC-public-rt"
            },
            "tags_all": {
              "Name": "EksVPC-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028f51c1558458e86",
            "route_table_id": "rtb-035e54cc18a3ccc47",
            "subnet_id": "subnet-0f2cd17c06291565f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055c7f9e49e977ea1",
            "route_table_id": "rtb-035e54cc18a3ccc47",
            "subnet_id": "subnet-0436f87defbe742e0"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e7f701fa561e440",
            "route_table_id": "rtb-035e54cc18a3ccc47",
            "subnet_id": "subnet-0495d3d81c5aa205d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05632ecac7157b64c",
            "route_table_id": "rtb-0d8bc834c541ccd8f",
            "subnet_id": "subnet-0a100a3afdbf3f146"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603cde4623a622c9",
            "route_table_id": "rtb-0d8bc834c541ccd8f",
            "subnet_id": "subnet-0083c7f380385f6ee"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c158528f425e180",
            "route_table_id": "rtb-0d8bc834c541ccd8f",
            "subnet_id": "subnet-0fbf80ab97ee578a9"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:subnet/subnet-0f2cd17c06291565f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2cd17c06291565f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335550097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-private-subnet-1"
            },
            "tags_all": {
              "Name": "EksVPC-private-subnet-1"
            },
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "dependencies": [
            "aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:subnet/subnet-0436f87defbe742e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0436f87defbe742e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335550097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-private-subnet-2"
            },
            "tags_all": {
              "Name": "EksVPC-private-subnet-2"
            },
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "dependencies": [
            "aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:subnet/subnet-0495d3d81c5aa205d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0495d3d81c5aa205d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335550097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-private-subnet-3"
            },
            "tags_all": {
              "Name": "EksVPC-private-subnet-3"
            },
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "dependencies": [
            "aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:subnet/subnet-0a100a3afdbf3f146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a100a3afdbf3f146",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335550097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-public-subnet-1"
            },
            "tags_all": {
              "Name": "EksVPC-public-subnet-1"
            },
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "dependencies": [
            "aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:subnet/subnet-0083c7f380385f6ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0083c7f380385f6ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335550097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-public-subnet-2"
            },
            "tags_all": {
              "Name": "EksVPC-public-subnet-2"
            },
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "dependencies": [
            "aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:subnet/subnet-0fbf80ab97ee578a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbf80ab97ee578a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335550097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-public-subnet-3"
            },
            "tags_all": {
              "Name": "EksVPC-public-subnet-3"
            },
            "vpc_id": "vpc-084d76b1e7a9596f2"
          },
          "dependencies": [
            "aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EksVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335550097:vpc/vpc-084d76b1e7a9596f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aee901a845e9d734",
            "default_route_table_id": "rtb-04abc3f527e639108",
            "default_security_group_id": "sg-0d4e2ec761c486dd0",
            "dhcp_options_id": "dopt-09ecb8e2c66b012ee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084d76b1e7a9596f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04abc3f527e639108",
            "owner_id": "730335550097",
            "tags": {
              "Name": "EksVPC"
            },
            "tags_all": {
              "Name": "EksVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c982f4494c30098e",
            "arn": "arn:aws:ec2:us-east-1:730335550097:elastic-ip/eipalloc-0c982f4494c30098e",
            "association_id": "eipassoc-0e84059e5854c9abf",
            "domain": "vpc",
            "id": "eipalloc-0c982f4494c30098e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d8c3fc2bc22438a3",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-52-200-158-201.compute-1.amazonaws.com",
            "public_ip": "52.200.158.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EksVPC-nat-eip"
            },
            "tags_all": {
              "Name": "EksVPC-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c982f4494c30098e",
            "association_id": "eipassoc-0e84059e5854c9abf",
            "connectivity_type": "public",
            "id": "nat-0a59bf56e542ebff8",
            "network_interface_id": "eni-0d8c3fc2bc22438a3",
            "private_ip": "10.0.1.175",
            "public_ip": "52.200.158.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a100a3afdbf3f146",
            "tags": {
              "Name": "EksVPC-nat-gw"
            },
            "tags_all": {
              "Name": "EksVPC-nat-gw"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.EksVPC",
            "module.nat_gateway.aws_eip.nat_eip"
          ]
        }
      ]
    }
  ]
}